Added empty entries for remaining Water-type starters. Added minimum level for those, and HM moves for all remaining pokemon currently in pokemon.ini. Asded missing tutor_moves entry for later pokemon.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -666,7 +666,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -698,7 +698,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -729,7 +729,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -761,7 +761,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -793,7 +793,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -825,7 +825,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -857,7 +857,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -889,7 +889,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -921,7 +921,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -953,7 +953,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -985,7 +985,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1017,7 +1017,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1049,7 +1049,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1081,7 +1081,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1113,7 +1113,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1145,7 +1145,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1177,7 +1177,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1208,7 +1208,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1240,7 +1240,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Surf,Waterfall,Dive
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1272,7 +1272,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Surf,Strength,Waterfall,Dive
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1303,7 +1303,415 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut,Surf,Strength,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Mudkip]
+page = 54
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 1
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Surf,Strength,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Marshtomp]
+page = 55
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 15
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Surf,Strength,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Swampert]
+page = 56
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 30
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Surf,Strength,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Piplup]
+page = 57
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 1
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Cut,Surf,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Prinplup]
+page = 58
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 15
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Cut,Surf,Strength,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Empoleon]
+page = 59
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 30
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Cut,Surf,Strength,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Oshawott]
+page = 60
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 1
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Cut,Surf,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Dewott]
+page = 61
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 15
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Cut,Surf,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Samurott]
+page = 62
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 30
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Cut,Surf,Strength,Waterfall,Dive
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Froakie]
+page = 63
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 1
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Cut,Surf,Strength,Waterfall
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Frogadier]
+page = 64
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 15
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Cut,Surf,Strength,Waterfall
+tm_moves = 
+egg_moves = 
+tutor_moves = 
+[Greninja]
+page = 65
+legendary = False
+base_hp = 
+base_attack = 
+base_defense = 
+base_special_attack = 
+base_special_defense = 
+base_speed = 
+types = 
+basic_abilities = 
+advanced_abilities = 
+high_ability = 
+evolutions = 
+minimum_level = 30
+diets = 
+habitats = 
+egg_groups = 
+gender_ratio_m = 
+average_hatch_rate_days = 
+family = 
+capabilities = 
+height = 
+height_metric = 
+height_class = 
+weight = 
+weight_metric = 
+weight_class = 
+skills = 
+level_moves = 
+hm_moves = Cut,Surf,Strength,Waterfall
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1335,7 +1743,7 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Fly
 tm_moves = 
 egg_moves = 
 tutor_moves = 
@@ -1367,9 +1775,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Fly
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Talonflame]
 page = 97
 legendary = False
@@ -1397,9 +1806,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Fly
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Oddish]
 page = 125
 legendary = False
@@ -1428,9 +1838,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Gloom]
 page = 126
 legendary = False
@@ -1459,9 +1870,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Vileplume]
 page = 127
 legendary = False
@@ -1489,9 +1901,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Bellossom]
 page = 128
 legendary = False
@@ -1519,9 +1932,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Pichu]
 page = 144
 legendary = False
@@ -1550,9 +1964,9 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Pikachu]
 page = 145
 legendary = False
@@ -1581,9 +1995,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Strength
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Raichu]
 page = 146
 legendary = False
@@ -1611,9 +2026,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Strength
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Eevee]
 page = 631
 legendary = False
@@ -1645,6 +2061,7 @@ level_moves =
 hm_moves = 
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Vaporeon]
 page = 632
 legendary = False
@@ -1672,9 +2089,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Surf,Strength,Waterfall,Dive
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Jolteon]
 page = 633
 legendary = False
@@ -1702,9 +2120,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Strength
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Flareon]
 page = 634
 legendary = False
@@ -1732,9 +2151,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Strength
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Espeon]
 page = 635
 legendary = False
@@ -1762,9 +2182,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Umbreon]
 page = 636
 legendary = False
@@ -1792,9 +2213,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Cut
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Leafeon]
 page = 637
 legendary = False
@@ -1822,9 +2244,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Strength
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Glaceon]
 page = 638
 legendary = False
@@ -1852,9 +2275,10 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
+hm_moves = Strength
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 [Sylveon]
 page = 639
 legendary = False
@@ -1882,9 +2306,9 @@ weight = ,
 weight_class = 
 skills = 
 level_moves = 
-hm_moves = 
 tm_moves = 
 egg_moves = 
+tutor_moves = 
 ; [DEFAULT]
 ; page = 
 ; legendary = False
