Added gender ratios, average hatch times for everything so far. Added Ditto, Unown. Removed extra fields from template entry.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -625,8 +625,7 @@ minimum_level = 30
 diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Monster,Dragon
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Charmander,Charmeleon,Charizard
 capabilities = Overland:6,Swim:5,Sky:8,High Jump:2,Long Jump:3,Power:8,Firestarter,Glow,Heater,Naturewalk:Mountain,Mountable:1
 height = 5'7",1.7m
@@ -656,20 +655,20 @@ minimum_level = 1
 diets = Herbivore
 habitats = Cave,Mountain
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = Cyndaquil,Quilava,Typhlosion
 capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Burrow:2,Power:2,Firestarter,Heater,Glow,Naturewalk:Grassland,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = 
-level_moves = 
+height = 1'8",0.5m
+height_class = Small
+weight = 17.4 lbs.,7.9kg
+weight_class = 1
+skills = Athletics:2d6+2,Acrobatics:2d6,Combat:2d6,Stealth:3d6+3,Perception:3d6,Focus:2d6
+level_moves = 1:Tackle,1:Leer,6:Smokescreen,10:Ember,13:Quick Attack,19:Flame Wheel,22:Defense Curl,28:Flame Charge,31:Swift,37:Lava Plume,40:Flamethrower,46:Inferno,49:Rollout,55:Double-Edge,58:Eruption
 hm_moves = Cut
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+tm_moves = Toxic,Hidden Power,Sunny Day,Protect,Frustration,Return,Dig,Double Team,Flamethrower,Fire Blast,Aerial Ace,Facade,Flame Charge,Rest,Attract,Round,Overheat,Incinerate,Will-O-Wisp,Swagger,Sleep Talk,Substitute,Wild Charge,Nature Power
+egg_moves = Covet,Crush Claw,Double Kick,Double-Edge,Extrasensory,Flame Burst,Flare Blitz,Foresight,Fury Swipes,Howl,Nature Power,Quick Attack,Reversal,Thrash
+tutor_moves = Body Slam,Covet,Fire Pledge,Heat Wave,Mud-Slap,Rollout,Sleep Talk,Snore
 [Quilava]
 page = 34
 legendary = False
@@ -688,8 +687,7 @@ minimum_level = 15
 diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Cyndaquil,Quilava,Typhlosion
 capabilities = Overland:7,Swim:4,High Jump:2,Long Jump:2,Burrow:3,Power:3,Firestarter,Heater,Glow,Naturewalk:Grassland,Underdog
 height = ,
@@ -719,8 +717,7 @@ minimum_level = 30
 diets = Carnivore
 habitats = Cave,Mountain
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Cyndaquil,Quilava,Typhlosion
 capabilities = Overland:9,Swim:5,High Jump:2,Long Jump:2,Power:6,Firestarter,Heater,Glow,Naturewalk:Grassland
 height = ,
@@ -751,8 +748,8 @@ minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = 
 capabilities = 
 height = ,
@@ -783,8 +780,7 @@ minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = ,
@@ -815,8 +811,7 @@ minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = ,
@@ -847,8 +842,8 @@ minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = 
 capabilities = 
 height = ,
@@ -879,8 +874,7 @@ minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = ,
@@ -911,8 +905,7 @@ minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = ,
@@ -943,8 +936,8 @@ minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = 
 capabilities = 
 height = ,
@@ -975,8 +968,7 @@ minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = ,
@@ -1007,8 +999,7 @@ minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = ,
@@ -1039,8 +1030,8 @@ minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = 
 capabilities = 
 height = ,
@@ -1071,8 +1062,7 @@ minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = ,
@@ -1103,8 +1093,7 @@ minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = ,
@@ -1135,8 +1124,8 @@ minimum_level = 1
 diets = Herbivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = Squirtle,Wartortle,Blastoise
 capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:1,Power:2,Fountain,Naturewalk:Wetland,Underdog
 height = ,
@@ -1167,8 +1156,7 @@ minimum_level = 15
 diets = Omnivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Squirtle,Wartortle,Blastoise
 capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:1,Power:4,Fountain,Naturewalk:Wetlands,Underdog
 height = ,
@@ -1198,8 +1186,7 @@ minimum_level = 30
 diets = Omnivore
 habitats = Beach,Freshwater,Ocean
 egg_groups = Monster,Water 1
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Squirtle,Wartortle,Blastoise
 capabilities = Overland:6,Swim:9,High Jump:1,Long Jump:1,Power:9,Fountain,Naturewalk:Grassland,Mountable:1
 height = ,
@@ -1230,8 +1217,8 @@ minimum_level = 1
 diets = Carnivore
 habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = Tododile,Croconaw,Feraligatr
 capabilities = Overland:6,Swim:6,High Jump:1,Long Jump:2,Power:2,Fountain,Naturewalk:Wetlands,Underdog
 height = ,
@@ -1262,8 +1249,7 @@ minimum_level = 15
 diets = Carnivore
 habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Tododile,Croconaw,Feraligatr
 capabilities = Overland:7,Swim:7,High Jump:1,Long Jump:2,Power:5,Fountain,Naturewalk:Wetlands,Underdog
 height = ,
@@ -1293,8 +1279,7 @@ minimum_level = 30
 diets = Carnivore
 habitats = Beach,Freshwater,Marsh
 egg_groups = Monster,Water 1
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Tododile,Croconaw,Feraligatr
 capabilities = Overland:7,Swim:8,High Jump:2,Long Jump:2,Power:8,Fountain,Naturewalk:Wetlands
 height = ,
@@ -1325,8 +1310,8 @@ minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = 
 capabilities = 
 height = 
@@ -1359,8 +1344,7 @@ minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = 
@@ -1393,8 +1377,7 @@ minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = 
@@ -1427,8 +1410,8 @@ minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = 
 capabilities = 
 height = 
@@ -1461,8 +1444,7 @@ minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = 
@@ -1495,8 +1477,7 @@ minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = 
@@ -1529,8 +1510,8 @@ minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = 
 capabilities = 
 height = 
@@ -1563,8 +1544,7 @@ minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = 
@@ -1597,8 +1577,7 @@ minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = 
@@ -1631,8 +1610,8 @@ minimum_level = 1
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 10
 family = 
 capabilities = 
 height = 
@@ -1665,8 +1644,7 @@ minimum_level = 15
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = 
@@ -1699,8 +1677,7 @@ minimum_level = 30
 diets = 
 habitats = 
 egg_groups = 
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = 
 capabilities = 
 height = 
@@ -1733,8 +1710,8 @@ minimum_level = 1
 diets = Carnivore
 habitats = Forest,Grassland
 egg_groups = Flying
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
+average_hatch_rate_days = 7
 family = Fletchling,Fletchinder,Talonflame
 capabilities = Overland:3,Sky:5,High Jump:1,Long Jump:1,Power:1,Guster,Underdog
 height = ,
@@ -1765,8 +1742,7 @@ minimum_level = 15
 diets = Carnivore
 habitats = Forest,Grassland
 egg_groups = Flying
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
 family = Fletchling,Fletchinder,Talonflame
 capabilities = Overland:3,Sky:7,High Jump:2,Long Jump:2,Power:2,Firestarter,Guster,Underdog
 height = ,
@@ -1796,8 +1772,7 @@ minimum_level = 30
 diets = Carnivore
 habitats = Forest,Grassland
 egg_groups = Flying
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
 family = Fletchling,Fletchinder,Talonflame
 capabilities = Overland:4,Sky:8,High Jump:2,Long Jump:2,Power:4,Firestarter,Guster,Mountable:1
 height = ,
@@ -1828,8 +1803,8 @@ minimum_level = 1
 diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
+average_hatch_rate_days = 10
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:4,Swim:2,Burrow:1,High Jump:1,Long Jump:1,Power:1,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 height = ,
@@ -1860,8 +1835,7 @@ minimum_level = 20
 diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:5,Swim:2,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest,Underdog
 height = ,
@@ -1891,8 +1865,7 @@ minimum_level = 30
 diets = Phototroph
 habitats = Forest,Grassland,Marsh,Rainforest
 egg_groups = Plant
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Naturewalk:Grassland,Naturewalk:Forest
 height = ,
@@ -1922,8 +1895,7 @@ minimum_level = 30
 diets = Phototroph
 habitats = Marsh,Rainforest
 egg_groups = Plant
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
 family = Oddish,Gloom,Vileplume,Bellossom
 capabilities = Overland:5,Swim:3,High Jump:1,Long Jump:1,Power:2,Alluring,Naturewalk:Grassland,Naturewalk:Forest
 height = ,
@@ -1954,8 +1926,8 @@ minimum_level = 1
 diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field,Fairy
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
+average_hatch_rate_days = 4
 family = Pichu,Pikachu,Raichu
 capabilities = Overland:3,Swim:1,High Jump:1,Long Jump:2,Power:1,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
 height = ,
@@ -1985,8 +1957,7 @@ minimum_level = 1
 diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field,Fairy
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
 family = Pichu,Pikachu,Raichu
 capabilities = Overland:7,Swim:2,High Jump:2,Long Jump:2,Power:2,Zapper,Naturewalk:Forest,Naturewalk:Urban,Underdog
 height = ,
@@ -2016,8 +1987,7 @@ minimum_level = 20
 diets = Herbivore
 habitats = Forest
 egg_groups = Field,Fairy
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 50
 family = Pichu,Pikachu,Raichu
 capabilities = Overland:6,Swim:3,High Jump:2,Long Jump:2,Power:4,Zapper,Naturewalk:Forest,Naturewalk:Urban
 height = ,
@@ -2030,6 +2000,60 @@ hm_moves = Strength
 tm_moves = 
 egg_moves = 
 tutor_moves = 
+[Ditto]
+page = 629
+legendary = False
+base_hp = 5
+base_attack = 5
+base_defense = 5
+base_special_attack = 5
+base_special_defense = 5
+base_speed = 5
+types = Normal
+basic_abilities = Impostor,Limber
+advanced_abilities = Discipline,Trace
+high_ability = Sturdy
+minimum_level = 1
+diets = Herbivore,Form-Dependent
+habitats = Forest,Grassland,Urban
+egg_groups = Ditto
+gender_ratio_m = No Gender
+average_hatch_rate_days = 10
+family = Ditto
+capabilities = Overland:4,Swim:4,High Jump:1,Long Jump:1,Power:1,Amorphous,Wallclimber,Shapeshifter,Underdog
+height = 1'0",0.3m
+height_class = Small
+weight = 8.8 lbs.,4.0kg
+weight_class = 1
+skills = Athletics:2d6,Acrobatics:2d6,Combat:2d6,Stealth:4d6+2,Perception:3d6,Focus:3d6
+level_moves = 1:Transform
+[Unown]
+page = 630
+legendary = False
+base_hp = 5
+base_attack = 7
+base_defense = 5
+base_special_attack = 7
+base_special_defense = 5
+base_speed = 5
+types = Psychic
+basic_abilities = Levitate,Forewarn
+advanced_abilities = Perception,Anticipation
+high_ability = Keen Eye
+minimum_level = 1
+diets = Nullivore
+habitats = Cave,Urban
+egg_groups = Indeterminate
+gender_ratio_m = No Gender
+average_hatch_rate_days = 25
+family = Unown
+capabilities = Levitate:4,Swim:2,High Jump:1,Long Jump:1,Power:1,Invisibility,Telekinetic,Underdog,Gather Unown
+height = 1'8",0.5m
+height_class = Small
+weight = 11 lbs.,5.0kg
+weight_class = 1
+skills = Athletics:1d6+2,Acrobatics:2d6,Combat:2d6,Stealth:3d6+1,Perception:5d6,Focus:3d6
+level_moves = 1:Hidden Power
 [Eevee]
 page = 631
 legendary = False
@@ -2048,8 +2072,8 @@ minimum_level = 1
 diets = Herbivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
+average_hatch_rate_days = 20
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:4,High Jump:1,Long Jump:1,Power:2,Tracker,Underdog
 height = ,
@@ -2079,8 +2103,7 @@ minimum_level = 1
 diets = Omnivore
 habitats = Forest,Freshwater
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:5,Swim:8,High Jump:1,Long Jump:2,Power:3,Amorphous,Gilled,Fountain,Tracker
 height = ,
@@ -2110,8 +2133,7 @@ minimum_level = 1
 diets = Omnivore
 habitats = Forest,Urban
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:10,Swim:5,High Jump:2,Long Jump:3,Power:3,Tracker,Zapper
 height = ,
@@ -2141,8 +2163,7 @@ minimum_level = 1
 diets = Omnivore
 habitats = Cave,Mountain,Urban
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:7,Swim:3,High Jump:1,Long Jump:2,Power:3,Egg Warmer,Firestarter,Tracker
 height = ,
@@ -2172,8 +2193,7 @@ minimum_level = 1
 diets = Omnivore
 habitats = Forest,Grassland,Urban
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Telepath,Telekinetic,Tracker,Premonition
 height = ,
@@ -2203,8 +2223,7 @@ minimum_level = 1
 diets = Omnivore
 habitats = Cave,Forest,Urban
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Darkvision,Tracker,Stealth
 height = ,
@@ -2234,8 +2253,7 @@ minimum_level = 1
 diets = Herbivore,Phototroph
 habitats = Forest,Grassland,Rainforest
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:7,Swim:4,High Jump:1,Long Jump:2,Power:3,Naturewalk:Grassland,Naturewalk:Forest,Tracker
 height = ,
@@ -2265,8 +2283,7 @@ minimum_level = 1
 diets = Omnivore
 habitats = Taiga,Tundra
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Freezer,Naturewalk:Tundra,Tracker
 height = ,
@@ -2296,8 +2313,7 @@ minimum_level = 1
 diets = Herbivore
 habitats = Grassland,Urban
 egg_groups = Field
-gender_ratio_m = 
-average_hatch_rate_days = 
+gender_ratio_m = 87.5
 family = Eevee,Vaporeon,Jolteon,Flareon,Espeon,Umbreon,Leafeon,Glaceon,Sylveon
 capabilities = Overland:6,Swim:4,High Jump:1,Long Jump:2,Power:3,Tracker
 height = ,
@@ -2332,10 +2348,8 @@ tutor_moves =
 ; family = 
 ; capabilities = 
 ; height = 
-; height_metric = 
 ; height_class = 
 ; weight = 
-; weight_metric = 
 ; weight_class = 
 ; skills = 
 ; level_moves = 
