Added missing Quilava data.

--- a/pokemon.ini
+++ b/pokemon.ini
@@ -690,16 +690,15 @@ egg_groups = Field
 gender_ratio_m = 87.5
 family = Cyndaquil,Quilava,Typhlosion
 capabilities = Overland:7,Swim:4,High Jump:2,Long Jump:2,Burrow:3,Power:3,Firestarter,Heater,Glow,Naturewalk:Grassland,Underdog
-height = ,
-height_class = 
-weight = ,
-weight_class = 
-skills = 
-level_moves = 
+height = 2'11",0.9m
+height_class = Small
+weight = 41.9 lbs.,19.0kg
+weight_class = 2
+skills = Athletics:4d6+2,Acrobatics:3d6,Combat:3d6,Stealth:4d6+3,Perception:3d6+3,Focus:3d6
+level_moves = 6:Smokescreen,10:Ember,13:Quick Attack,20:Flame Wheel,24:Defense Curl,31:Swift,35:Flame Charge,42:Lava Plume,46:Flamethrower,53:Inferno,57:Rollout,64:Double-Edge,68:Eruption
 hm_moves = Cut,Strength
-tm_moves = 
-egg_moves = 
-tutor_moves = 
+tm_moves = Roar,Toxic,Hidden Power,Sunny Day,Protect,Frustration,Return,Dig,Brick Break,Double Team,Flamethrower,Fire Blast,Aerial Ace,Facade,Flame Charge,Rest,Attract,Round,Overheat,Incinerate,Will-O-Wisp,Swagger,Sleep Talk,Substitute,Wild Charge,Rock Smash,Nature Power
+tutor_moves = Body Slam,Covet,Fire Pledge,Focus Punch,Fury Cutter,Heat Wave,Mud-Slap,Rollout,Sleep Talk,Snore
 [Typhlosion]
 page = 35
 legendary = False
